
6. New: exceptions package.  exceptions.exception_name, exceptions.exception_info, exceptions.exception_status_code.

7. New: style issue: large indentations now reported as an error. 

8. New: environment variable TABSIZE can change the number of spaces for a tab from the default 8 to a different number.

9. New chains package.  chains.chain_count, chains.chain_context, chains.in_chain. [docs needed]

10. New doubly_linked_list package: new_list, clear, is_empty, length, append, prepend, first_element, last_element, delete_first, delete_last, new_cursor, first, last, next, previous, element, replace_element, insert_before, insert_before_and_mark, delete, contains, find, reverse_find, reverse_elements flip, assign, move, swap, swap_links, splice, has_element, assemble, disasemble [negative testing needed] [disassemble needs work]

11. Fix: SMTP sanitizes output, provides timestamp. [testing needed] [timezone handling needed]

12. New: dynamic_hash_tables package.   dynamic_hash_tables.new_table,  dynamic_hash_tables.set, dynamic_hash_tables.reset, dynamic_hash_tables.get, dynamic_hash_tables.has_element, dynamic_hash_tables.remove, dynamic_hash_tables.get_first, dynamic_hash_tables.get_next, dynamic_hash_tables.add, dynamic_hash_tables.replace, dynamic_hash_tables.append, dynamic_hash_tables.prepend, dynamic_hash_tables.increment, dynamic_hash_tables.decrement. [negative testing needed] 

13. New: type and subtype can create derived array types.

14. Fix: optional template file paths now working again.

15. Fix: errors processing template files are now being displayed again.

16. Fix: processing template files with a main program does not discard the main program variables prior to processing the template.

17. Fix: extra newline no longer appears when <?spar tag is at the end of line in a template file.

17. Fix: unused variable checks suppressed for scripts with templates.

18. New Examples: dynamic_css and dynamic_css2.
