@@ -48,7 +48,7 @@ CHANGES SINCE 1.4
 
 8. New: environment variable TABSIZE can change the number of spaces for a tab from the default 8 to a different number.
 
-9. New chains package.  chains.chain_count, chains.chain_context, chains.in_chain. [docs needed]
+9. New chains package.  chains.chain_count, chains.chain_context, chains.in_chain.
 
 10. New doubly_linked_list package: new_list, clear, is_empty, length, append, prepend, first_element, last_element, delete_first, delete_last, new_cursor, first, last, next, previous, element, replace_element, insert_before, insert_before_and_mark, delete, contains, find, reverse_find, reverse_elements flip, assign, move, swap, swap_links, splice, has_element, assemble, disasemble [negative testing needed] [disassemble needs work]
 
@@ -81,6 +81,11 @@ CHANGES SINCE 1.4
 23. Change: different cgi script templates produce error messages in formats suitable for the template type.  Same for exceptions.
 
 24. Fix: raise at the end of a simple script no longer causes an unreachable code error.
+
+25. Fix: uninitialized numeric variables no longer crash "?" but are reported as an approprate error.
+
+26. Change: uninitialized variables in expressions now give an unitialized variable error messages instead of general "exception raised" error message.
+
 
 ??. Around parser.adb 5812: doesn't allow mixing of shell and adascript parameters in a pipeline.  Fix this??
 
